force-app/main/default/objects/A_R_info__c/A_R_info__c.object-meta.xml
<CustomObject>
    <label>A/R Info</label>
    <nameField>
        <label>A/R info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A/R Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>