force-app/main/default/objects/A_R_info__c/fields/AdjC_LocalSvc__c.field-meta.xml
<CustomField>
    <fullName>AdjC_LocalSvc__c</fullName>
    <label>AdjC/LocalSvc</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>