force-app/main/default/objects/A_R_info__c/fields/Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Adjustments__c</fullName>
    <label>Adjustments</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>