force-app/main/default/objects/A_R_info__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>