force-app/main/default/objects/A_R_info__c/fields/Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Number__c</fullName>
    <label>Billing Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>