force-app/main/default/objects/A_R_info__c/fields/count__c.field-meta.xml
<CustomField>
    <fullName>count__c</fullName>
    <formula>LEN( Account_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>