force-app/main/default/objects/A_R_info__c/fields/Library_id__c.field-meta.xml
<CustomField>
    <fullName>Library_id__c</fullName>
    <label>Library id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>