force-app/main/default/objects/A_R_info__c/fields/P_P_O_C_C__c.field-meta.xml
<CustomField>
    <fullName>P_P_O_C_C__c</fullName>
    <label>P.P/O.C.C</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>