force-app/main/default/objects/A_R_info__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>