force-app/main/default/objects/A_R_info__c/fields/Prior_Bill__c.field-meta.xml
<CustomField>
    <fullName>Prior_Bill__c</fullName>
    <label>Prior Bill</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>