force-app/main/default/objects/A_R_info__c/fields/Seq_No__c.field-meta.xml
<CustomField>
    <fullName>Seq_No__c</fullName>
    <label>Sequence Number</label>
    <length>1</length>
    <type>Text</type>
</CustomField>