force-app/main/default/objects/A_R_info__c/fields/Toll_Charges__c.field-meta.xml
<CustomField>
    <fullName>Toll_Charges__c</fullName>
    <label>Toll Charges</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>