force-app/main/default/objects/A_R_info__c/fields/Total_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Total_Taxes__c</fullName>
    <label>Total Taxes</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>