force-app/main/default/objects/A_R_info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_Id__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Library_id__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>